@@ -1,3 +1,7 @@
+2012-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* ptexlib.h: Drop unused definition of M_PI.
+
 2012-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* tex/dumpdata.h: Remove the swap_items() prototype.
